--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py312-django{42,52}
+envlist = py312-django41
 
 [doc8]
 ; D001 = Line too long
@@ -36,8 +36,7 @@ norecursedirs = .* docs requirements site-packages
 
 [testenv]
 deps =
-    django42: Django>=4.0,<5.0
-    django52: Django>=5.0,<5.3
+    django41: Django>=4.1,<5
     -r{toxinidir}/requirements/test.txt
 commands =
     python manage.py check
