Add email notification functionality for course creation process
- Introduced email utilities for sending notifications on course creation success, failure, and progress.
- Implemented email templates for various notification types, including course structure generation and content generation.
- Updated API views to send appropriate email notifications based on course creation status.
- Enhanced settings to configure email parameters such as platform name and reply-to email address.
- Included new template files for email notifications in the project structure.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,3 +4,4 @@ include README.rst
 include requirements/base.in
 include requirements/constraints.txt
 recursive-include blendxcoursecreator *.html *.png *.gif *.js *.css *.jpg *.jpeg *.svg
+recursive-include blendxcoursecreator/templates *.html *.txt
